--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -27,9 +27,10 @@
                     <a class="btn btn-link btn-sm post-edit" href="{% url 'posts:edit_post' post.slug %}">
                         Edit
                     </a>
-                    <a class="btn btn-link btn-sm post-delete" href="{% url 'posts:delete_post' post.slug %}">
+                    <button class="btn btn-link btn-sm post-delete" data-href="{% url 'posts:delete_post' post.slug %}" data-toggle="modal" data-target="#confirm-delete">
                         Delete
-                    </a>
+                    </button>
+                    {% include "posts/delete_post_confirm.html" %}
                 </div>
             {% endif %}
         </div>
