--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}
     Registeration
 {% endblock title %}
 {% block content %}
     <div class="content-section logged-out">
-        <form method="POST">
+        <form method="POST" autocomplete="off">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="pb-2 mb-4">
@@ -14,7 +15,9 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-primary btn-block" type="submit">Sign Up</button>
+                <button class="btn btn-outline-primary btn-block" type="submit">
+                    Sign Up
+                </button>
             </div>
         </form>
         <div class="text-right">
@@ -24,3 +27,6 @@
         </div>
     </div>
 {% endblock content %}
+{% block scripts %}
+    <script src="{% static 'accounts/main.js' %}"></script>
+{% endblock scripts %}
