--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -41,7 +41,7 @@
                 </a>
             </h4>
         </div>
-        <div class="col-12">
+        <div class="col-12 pt-2">
             <p class="post-body">
                 {{ post.body }}
             </p>
