--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -22,6 +22,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link extra-btn" href="{% url 'posts:home' %}#popular_posts">
+                                Popular Posts
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                         </li>
                     {% else %}
