--- a/posts/templates/posts/_comment_base.html
+++ b/posts/templates/posts/_comment_base.html
@@ -15,7 +15,7 @@
             </a>
         </div>
     </div>
-    <div class="col-12">
+    <div class="col-12 pt-2">
         <p class="post-body">
             {{ comment.body }}
         </p>
