--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -22,27 +22,63 @@
             {% endif %}
         </div>
         <div class="col-sm-4 pr-1 pl-1 pl-sm-2 sidebar">
-            <ul class="list-group">
+            <a id="popular_posts"></a>
+            <ul class="list-group" id="popular-posts">
                 <li class="list-group-item text-center sidebar-header">Most Commented Posts</li>
                 {% if most_popular_posts %}
                     {% for post in most_popular_posts %}
                         <li class="list-group-item">
                             <div class="row">
-                                <div class="col-12 post-title">
+                                {% comment %}
+                                    <div class="col-12 post-title">
+                                        <a class="sidebar-post-title" href="{% url 'posts:view_post' post.slug %}">
+                                            {{ post.title }}
+                                        </a>
+                                    </div>
+                                    <div class="col-12">
+                                        <small class="text-muted">
+                                            {{ post.comments.count }} comments
+                                        </small>
+                                    </div>
+                                    <div class="col-12 text-right post-author">
+                                        <small>
+                                            <a class="text-right" href="{% url 'accounts:view_account' post.user.profile.slug %}">
+                                                {{ post.user }}
+                                            </a>
+                                        </small>
+                                    </div>
+                                {% endcomment %}
+                                <div class="col-auto pr-0">
+                                        <a href="{% url 'accounts:view_account' post.user.profile.slug %}">
+                                            {% if post.user.profile.image %}
+                                                <img class="rounded-circle comments-profile-pic" src="{{ post.user.profile.image_url }}">
+                                            {% else %}
+                                                <img class="posts-profile-pic" src="/media/default.jpg">
+                                            {% endif %}
+                                        </a>
+                                    </div>
+                                    <div class="float-right pl-0">
+                                        <div class="col-12 post-author">
+                                            <a href="{% url 'accounts:view_account' post.user.profile.slug %}">
+                                                {{ post.user.username }}
+                                            </a>
+                                        </div>
+                                    </div>
+                                <div class="col-12 post-title pt-2">
                                     <a class="sidebar-post-title" href="{% url 'posts:view_post' post.slug %}">
                                         {{ post.title }}
                                     </a>
                                 </div>
                                 <div class="col-12">
-                                    <small class="text-muted">
-                                        {{ post.comments.count }} comments
+                                    <small>
+                                        <a class="text-muted" href="{% url 'posts:view_post' post.slug %}">
+                                            {{ post.date_posted|date:"g:i A - d M Y" }}
+                                        </a>
                                     </small>
                                 </div>
-                                <div class="col-12 text-right post-author">
+                                <div class="col-12 text-right">
                                     <small>
-                                        <a class="text-right" href="{% url 'accounts:view_account' post.user.profile.slug %}">
-                                            {{ post.user }}
-                                        </a>
+                                        {{ post.comments.count }} comments
                                     </small>
                                 </div>
                             </div>
