--- a/posts/templates/posts/_comment_base.html
+++ b/posts/templates/posts/_comment_base.html
@@ -4,7 +4,7 @@
             {% if user.profile.image %}
                 <img class="rounded-circle comments-profile-pic" src="{{ post.user.profile.image.url }}">
             {% else %}
-                <img class="posts-profile-pic" src="/media/default.jpg">
+                <img class="rounded-circle posts-profile-pic" src="/media/default.jpg">
             {% endif %}
         </a>
     </div>
