--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -5,7 +5,7 @@
                 {% if post.user.profile.image %}
                     <img class="rounded-circle posts-profile-pic" src="{{ post.user.profile.image_url }}">
                 {% else %}
-                    <img class="posts-profile-pic" src="/media/default.jpg">
+                    <img class="rounded-circle posts-profile-pic" src="/media/default.jpg">
                 {% endif %}
             </a>
         </div>
