--- a/base/static/style.css
+++ b/base/static/style.css
@@ -20,9 +20,7 @@ body {
 .post-body,
 .post-title {
     color: #3E4347;
-    /* white-space: pre-line; */
     word-wrap: break-word;
-
 }
 
 .post-author a {
@@ -152,7 +150,8 @@ legend {
     opacity: 1;
 }
 
-#popularPosts::before {
+#popularPosts::before,
+#suggestedFriends::before {
     content: "";
     display: block;
     height: 60px;
@@ -182,12 +181,12 @@ tr { font-size: 1rem; }
     .accounts-profile-pic { width: 100px; height: 100px;}
     .posts-profile-pic { width: 60px; height: 60px; }
 }
-@media screen and (max-width: 576px)
+@media screen and (max-width: 768px)
 {
     .extra-btn { display: block; }
     .content-section { border-bottom: 1px solid #ADB3B8; padding: 15px 10px; }
 }
-@media screen and (min-width: 577px) {
+@media screen and (min-width: 769px) {
     .extra-btn { display: none; }
     .content-section { border: 1px solid #768593; border-radius: 3px; margin-bottom: 5px; padding: 10px; }
 }
