--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -21,11 +21,18 @@
                             Account
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link extra-btn" href="{% url 'posts:home' %}#popularPosts">
-                            Popular Posts
-                        </a>
-                    </li>
+                    {% if request.path == '/' %}
+                        <li class="nav-item">
+                            <a class="nav-link extra-btn" href="{% url 'posts:home' %}#popularPosts">
+                                Popular Posts
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link extra-btn" href="{% url 'posts:home' %}#suggestedFriends">
+                                Suggested Friends
+                            </a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                     </li>
