--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 {% block content %}
     <div class="row home-page">
-        <div class="col-sm-3 pr-1 pl-1 pl-sm-2">
+        <div class="col-md-3 pr-1 pl-1 pl-sm-2 mb-5 order-2 order-md-1">
                 <a id="suggestedFriends"></a>
                 <ul class="list-group">
                     <li class="list-group-item text-center sidebar-header">Suggested Friends</li>
@@ -45,7 +45,7 @@
                     {% endif %}
                 </ul>
         </div>
-        <div class="col-sm-6 pr-1 pl-1">
+        <div class="col-md-6 pr-1 pl-1 order-1 order-md-2">
             {% include "posts/_new_post_form.html" %}
             {% if posts %}
                 {% for post in posts %}
@@ -60,7 +60,7 @@
                 </div>
             {% endif %}
         </div>
-        <div class="col-sm-3 pr-1 pl-1 pl-sm-2 sidebar">
+        <div class="col-md-3 pr-1 pl-1 pl-sm-2 order-3 order-md-3">
             <a id="popularPosts"></a>
             <ul class="list-group">
                 <li class="list-group-item text-center sidebar-header">Most Commented Posts</li>
