Fixed long lines in accounts app

--- a/accounts/templates/accounts/account_verification_failed.html
+++ b/accounts/templates/accounts/account_verification_failed.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <div class="content-section">
-        <h2 class="text-center">
+        <h2 class="text-center long-page">
             Activation Link has expired or your account has been already activated. Try to <a href="{% url 'login' %}">Login</a>.
         </h2>
     </div>
