--- a/accounts/templates/accounts/account_verified.html
+++ b/accounts/templates/accounts/account_verified.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <div class="content-section">
-        <h2 class="text-center">
+        <h2 class="text-center long-page">
             Thank your for confirming your e-mail. Now you can <a href="{% url 'login' %}">Login to your account</a>.
         </h2>
     </div>
