--- a/accounts/templates/accounts/account_created.html
+++ b/accounts/templates/accounts/account_created.html
@@ -5,8 +5,13 @@
 {% endblock title %}
 {% block content %}
     <div class="content-section">
-        <h2 class="text-center">
-            Your account has been successfully created. Please verify your e-mail to be able to sign in.
+        <h2 class="text-center long-page">
+            Your account has been successfully created. Please verify your e-mail to be able to 
+            <span>
+                <a href="{% url 'login' %}">
+                    sign in
+                </a>
+            </span>.
         </h2>
     </div>
 {% endblock content %}
