Fixed long lines in posts app

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -117,7 +117,7 @@
                     {% endfor %}
                 {% else %}
                     <li class="list-group-item">
-                        <div class="text-center">
+                        <div class="text-center long-page">
                             There are no posts in the site yet.
                         </div>
                     </li>
